<resources>
    <string name="app_name">Aplikasi Monitoring Porang</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_monitoring">Monitoring</string>
    <string name="title_catat">Catat</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_hasil">Hasil</string>
    <string name="title_profil">Profil</string>
    <string name="judulaplikasi">
        di aplikasi <b>Monitoring Porang</b>
        \n pilih tombol dibawah untuk melanjutkan</string>

    <string-array name="array_kelompok">
        <item>Kabat</item>
        <item>Glagah</item>
        <item>Songgon</item>
        <item>Licin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_tambah_lahan">Silahkan isi form berikut untuk menambahkan lahan</string>
    <string name="catat_hasil_panen">Isi form berikut untuk mencatat hasil panen</string>
    <string name="thanks_to">
        - Allah SWT.\n<br/>
        - Our Parents\n<br/>
        - Our Lecturer Mentor\n<br/>
        - and All Our Friends

    </string>
    <string name="team">
        - Husnul Alfaini\n<br/>
        - Bambang Setya Budi\n<br/>
        - Sandi Agus Triono</string>
    <string name="helper_pesanKatak">*Jika tidak pesan, isi dengan "0"</string>

</resources>