<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_monitoring">

    <fragment
        android:id="@+id/navigation_monitoring"
        android:name="com.example.proyekakhirmonitoringporang.ui.monitoring.MonitoringFragment"
        android:label="@string/title_monitoring"
        tools:layout="@layout/fragment_monitoring" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.example.proyekakhirmonitoringporang.ui.riwayat.RiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_catat"
        android:name="com.example.proyekakhirmonitoringporang.ui.catat.CatatFragment"
        android:label="@string/title_catat"
        tools:layout="@layout/fragment_catat" />

    <fragment
        android:id="@+id/navigation_hasil"
        android:name="com.example.proyekakhirmonitoringporang.ui.hasil.HasilFragment"
        android:label="@string/title_hasil"
        tools:layout="@layout/fragment_hasil" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.proyekakhirmonitoringporang.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>